--- a/src/main/resources/password/pwm/i18n/Display_ca.properties
+++ b/src/main/resources/password/pwm/i18n/Display_ca.properties
@@ -1,3 +1,4 @@
+#Tue, 20 Jun 2017 12:52:39 -0400
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -55,6 +56,7 @@ Button_Show=Mostra
 Button_Show_Responses=Mostra les respostes
 Button_Skip=Omet
 Button_SMS=SMS
+Button_TokenResend=Torna a enviar el codi
 Button_Unlock=Desbloqueja
 Button_UnlockPassword=Desbloqueja la contrasenya
 Button_Update=Actualitza
@@ -165,6 +167,7 @@ Display_SetupOtp_iPhone_Steps=<b>A l'iPhone, toqui la icona de l'App Store.</b><
 Display_SetupOtp_Other_Title=Altres
 Display_SetupOtp_Other_Steps=<b>Trobi una aplicaci\u00f3 compatible de dos factors.</b><ul><li>Intenti cercar a la botiga d'aplicacions del seu dispositiu <b>Google Authenticator</b>.<br/>Molts dispositius tenen aplicacions compatibles.</li><li>Intenti buscar una aplicaci\u00f3 que admeti "<b>testimonis de seguretat TOTP"</b> o "RFC6238"</li><li>Baixi i instal\u00b7li l'aplicaci\u00f3.</li></ul><b>Despr\u00e9s, obri i configuri l'aplicaci\u00f3.</b><ol><li>Introdueixi les dades d'aqu\u00ed sota o escanegi el codi segons les instruccions de l'aplicaci\u00f3.</li><li>Quan hagi configurat l'aplicaci\u00f3, cliqui el bot\u00f3 Continua.</li></ol>
 Display_TokenDestination=Destinaci\u00f3 del testimoni
+Display_TokenResend=El vostre codi de seguretat hauria d'arribar aviat. Si ja ha passat una estona i encara no heu rebut cap codi, feu clic al bot\u00f3 Torna a enviar el codi per rebre'n un de nou.
 Display_UsernameHeader=@User\:ID@
 Display_UsernameFooter=@User\:ID@
 Display_WarnExistingOtpSecretTime=Ja heu inscrit el dispositiu el dia <span class\="timestamp">%1%</span>. Podeu provar el vostre dispositiu actual escrivint el codi generat aqu\u00ed sota. Si continueu, podeu tornar a configurar el dispositiu actual.
@@ -238,7 +241,15 @@ Field_VerificationMethodChallengeResponses=Preguntes i respostes secretes
 Field_VerificationMethodAttributes=Dades personals
 Field_VerificationMethodRemoteResponses=Respostes externes
 Field_VerificationMethodNAAF=Autenticaci\u00f3 avan\u00e7ada
-Field_VerificationMethodOAuth=Autenticaci\u00f3 externa
+Field_VerificationMethodOAuth=Autenticaci\u00f3 d'OAuth externa
+Description_VerificationMethodPreviousAuth=
+Description_VerificationMethodToken=
+Description_VerificationMethodOTP=
+Description_VerificationMethodChallengeResponses=
+Description_VerificationMethodAttributes=
+Description_VerificationMethodRemoteResponses=
+Description_VerificationMethodNAAF=
+Description_VerificationMethodOAuth=
 Field_Placeholder_Answer=Resposta
 Long_Title_ActivateUser=Activar un compte preconfigurat i establir una contrasenya nova.
 Long_Title_Admin=Funcions administratives
