--- a/src/main/resources/password/pwm/i18n/Display_da.properties
+++ b/src/main/resources/password/pwm/i18n/Display_da.properties
@@ -1,3 +1,4 @@
+#Tue, 20 Jun 2017 12:52:39 -0400
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -55,6 +56,7 @@ Button_Show=Vis
 Button_Show_Responses=Vis svar
 Button_Skip=Spring over
 Button_SMS=Sms
+Button_TokenResend=Send koden igen
 Button_Unlock=L\u00e5s op
 Button_UnlockPassword=Adgangskode til opl\u00e5sning
 Button_Update=Opdater
@@ -165,6 +167,7 @@ Display_SetupOtp_iPhone_Steps=<b>Tryk p\u00e5 ikonet App Store p\u00e5 din iPhon
 Display_SetupOtp_Other_Title=Andet
 Display_SetupOtp_Other_Steps=<b>Find en kompatibel app til to faktor-godkendelse.</b><ul><li>Pr\u00f8v at s\u00f8ge efter <b>Google Authenticator</b> i enhedens appbutik.<br/>Mange enheder har kompatible apps.</li><li>Pr\u00f8v at finde en app, der underst\u00f8tter "<b>TOTP-sikkerhedstokens"</b> eller "RFC6238"</li><li>Download og install\u00e9r appen.</li></ul><b>\u00c5bn og konfigurer derefter appen.</b><ol><li>Angiv dataene herunder, eller scan koden iht. vejledningen i appen.</li><li>N\u00e5r du har konfigureret appen, skal du klikke p\u00e5 knappen Forts\u00e6t.</li></ol>
 Display_TokenDestination=Tokendestination
+Display_TokenResend=Du b\u00f8r modtage din sikkerhedskode med det samme. Hvis du har ventet et stykket id og endnu ikke har modtaget koden, skal du klikke p\u00e5 knappen Send igen for at f\u00e5 tilsendt en ny kode.
 Display_UsernameHeader=@User\:ID@
 Display_UsernameFooter=@User\:ID@
 Display_WarnExistingOtpSecretTime=Du har allerede tilmeldt din enhed p\u00e5 <span class\="timestamp">%1%</span>. Du kan teste din aktuelle enhed ved at skrive den genererede kode herunder. Hvis du forts\u00e6tter, kan du konfigurere din aktuelle enhed igen.
@@ -238,7 +241,15 @@ Field_VerificationMethodChallengeResponses=Hemmelige sp\u00f8rgsm\u00e5l og svar
 Field_VerificationMethodAttributes=Personlige data
 Field_VerificationMethodRemoteResponses=Eksterne svar
 Field_VerificationMethodNAAF=Advanced Authentication
-Field_VerificationMethodOAuth=Ekstern godkendelse
+Field_VerificationMethodOAuth=Ekstern OAuth-godkendelse
+Description_VerificationMethodPreviousAuth=
+Description_VerificationMethodToken=
+Description_VerificationMethodOTP=
+Description_VerificationMethodChallengeResponses=
+Description_VerificationMethodAttributes=
+Description_VerificationMethodRemoteResponses=
+Description_VerificationMethodNAAF=
+Description_VerificationMethodOAuth=
 Field_Placeholder_Answer=Svar
 Long_Title_ActivateUser=Aktiv\u00e9r en forudkonfigureret konto, og angiv en ny adgangskode.
 Long_Title_Admin=Administrative funktioner
