--- a/src/main/resources/password/pwm/i18n/Display_nl.properties
+++ b/src/main/resources/password/pwm/i18n/Display_nl.properties
@@ -1,3 +1,4 @@
+#Tue, 20 Jun 2017 12:52:39 -0400
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -55,6 +56,7 @@ Button_Show=Weergeven
 Button_Show_Responses=Antwoorden weergeven
 Button_Skip=Overslaan
 Button_SMS=Sms
+Button_TokenResend=Code opnieuw verzenden
 Button_Unlock=Ontgrendelen
 Button_UnlockPassword=Wachtwoord ontgrendelen
 Button_Update=Bijwerken
@@ -165,6 +167,7 @@ Display_SetupOtp_iPhone_Steps=<b>Tik op uw iPhone op het pictogram App Store.</b
 Display_SetupOtp_Other_Title=Overig
 Display_SetupOtp_Other_Steps=<b>Zoek een compatibele tweeledige app.</b><ul><li>Zoek in de App Store op uw apparaat naar <b>Google Authenticator</b>.<br/>Veel apparaten hebben compatibele apps.</li><li>Probeer een app te vinden die "<b>TOTP-beveiligingstokens"</b> of "RFC6238" ondersteunt. </li><li>Download en installeer de toepassing.</li></ul><b>Open de app en configureer deze vervolgens.</b><ol><li>Voer de onderstaande gegevens in of scan de code volgens de instructies van de app.</li><li>Zodra u de app hebt geconfigureerd, klikt u op de knop Doorgaan.</li></ol>
 Display_TokenDestination=Tokenbestemming
+Display_TokenResend=U moet uw beveiligingscode meteen ontvangen. Als u na enige tijd nog geen code hebt ontvangen, klikt u op de knop Opnieuw verzenden om een nieuwe code te ontvangen.
 Display_UsernameHeader=@User\:ID@
 Display_UsernameFooter=@User\:ID@
 Display_WarnExistingOtpSecretTime=U hebt uw apparaat al ingeschreven op <span class\="timestamp">%1%</span>. U kunt uw huidige apparaat testen door de gegenereerde code hieronder in te voeren. Als u doorgaat, kunt u uw huidige apparaat opnieuw configureren.
@@ -238,7 +241,15 @@ Field_VerificationMethodChallengeResponses=Geheime vragen en antwoorden
 Field_VerificationMethodAttributes=Persoonlijke gegevens
 Field_VerificationMethodRemoteResponses=Externe antwoorden
 Field_VerificationMethodNAAF=Geavanceerde verificatie
-Field_VerificationMethodOAuth=Externe verificatie
+Field_VerificationMethodOAuth=Externe OAuth-verificatie
+Description_VerificationMethodPreviousAuth=
+Description_VerificationMethodToken=
+Description_VerificationMethodOTP=
+Description_VerificationMethodChallengeResponses=
+Description_VerificationMethodAttributes=
+Description_VerificationMethodRemoteResponses=
+Description_VerificationMethodNAAF=
+Description_VerificationMethodOAuth=
 Field_Placeholder_Answer=Antwoord
 Long_Title_ActivateUser=Activeer een vooraf geconfigureerde account en stel een nieuw wachtwoord in.
 Long_Title_Admin=Beheerfuncties
