--- a/src/main/resources/password/pwm/i18n/Display_pl.properties
+++ b/src/main/resources/password/pwm/i18n/Display_pl.properties
@@ -1,3 +1,4 @@
+#Tue, 20 Jun 2017 12:52:39 -0400
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -55,6 +56,7 @@ Button_Show=Poka\u017c
 Button_Show_Responses=Poka\u017c odpowiedzi
 Button_Skip=Pomi\u0144
 Button_SMS=SMS
+Button_TokenResend=Ponownie wy\u015blij kod
 Button_Unlock=Odblokuj
 Button_UnlockPassword=Odblokuj has\u0142o
 Button_Update=Aktualizuj
@@ -165,6 +167,7 @@ Display_SetupOtp_iPhone_Steps=<b>Na telefonie iPhone stuknij ikon\u0119 App Stor
 Display_SetupOtp_Other_Title=Inne
 Display_SetupOtp_Other_Steps=<b>Znajd\u017a zgodn\u0105 aplikacj\u0119 do uwierzytelniania dwuczynnikowego.</b><ul><li>Spr\u00f3buj wyszuka\u0107 w sklepie z aplikacjami urz\u0105dzenia aplikacj\u0119 <b>Google Authenticator</b>.<br/>Wiele urz\u0105dze\u0144 ma zgodne aplikacje.</li><li>Spr\u00f3buj poszuka\u0107 aplikacji, kt\u00f3ra obs\u0142uguje <b>\u201etokeny zabezpiecze\u0144 TOTP\u201d</b> lub \u201eRFC6238\u201d.</li><li>Pobierz i zainstaluj aplikacj\u0119.</li></ul><b>Nast\u0119pnie otw\u00f3rz i skonfiguruj aplikacj\u0119</b><ol><li>Wprowad\u017a dane poni\u017cej lub zeskanuj kod, zgodnie z instrukcj\u0105 aplikacji.</li><li>Po skonfigurowaniu aplikacji kliknij przycisk Kontynuuj.</li></ol>
 Display_TokenDestination=Miejsce docelowe tokenu
+Display_TokenResend=Tw\u00f3j kod zabezpiecze\u0144 powinien zosta\u0107 dostarczony od razu. Je\u015bli czekasz od d\u0142u\u017cszego czasu i kod jeszcze nie nadszed\u0142, kliknij przycisk Ponownie wy\u015blij kod, aby otrzyma\u0107 nowy kod.
 Display_UsernameHeader=@User\:ID@
 Display_UsernameFooter=@User\:ID@
 Display_WarnExistingOtpSecretTime=Urz\u0105dzenie zosta\u0142o ju\u017c zarejestrowane dnia <span class\="timestamp">%1%</span>. Mo\u017cesz przetestowa\u0107 bie\u017c\u0105ce urz\u0105dzenie, wpisuj\u0105c poni\u017cej wygenerowany kod. W przypadku kontynuowania mo\u017cesz skonfigurowa\u0107 ponownie bie\u017c\u0105ce urz\u0105dzenie.
@@ -238,7 +241,15 @@ Field_VerificationMethodChallengeResponses=Tajne pytania i odpowiedzi
 Field_VerificationMethodAttributes=Dane osobowe
 Field_VerificationMethodRemoteResponses=Zewn\u0119trzne odpowiedzi
 Field_VerificationMethodNAAF=Advanced Authentication
-Field_VerificationMethodOAuth=Uwierzytelnianie zewn\u0119trzne
+Field_VerificationMethodOAuth=Uwierzytelnianie zewn\u0119trzne OAuth
+Description_VerificationMethodPreviousAuth=
+Description_VerificationMethodToken=
+Description_VerificationMethodOTP=
+Description_VerificationMethodChallengeResponses=
+Description_VerificationMethodAttributes=
+Description_VerificationMethodRemoteResponses=
+Description_VerificationMethodNAAF=
+Description_VerificationMethodOAuth=
 Field_Placeholder_Answer=Odpowied\u017a
 Long_Title_ActivateUser=Aktywuj wst\u0119pnie skonfigurowane konto i ustal nowe has\u0142o.
 Long_Title_Admin=Funkcje administracyjne
