--- a/src/main/resources/password/pwm/i18n/Display_pt_BR.properties
+++ b/src/main/resources/password/pwm/i18n/Display_pt_BR.properties
@@ -1,3 +1,4 @@
+#Tue, 20 Jun 2017 12:52:39 -0400
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -55,6 +56,7 @@ Button_Show=Mostrar
 Button_Show_Responses=Mostrar Respostas
 Button_Skip=Ignorar
 Button_SMS=SMS
+Button_TokenResend=Reenviar C\u00f3digo
 Button_Unlock=Desbloquear
 Button_UnlockPassword=Desbloquear Senha
 Button_Update=Atualizar
@@ -165,6 +167,7 @@ Display_SetupOtp_iPhone_Steps=<b>No iPhone, toque no \u00edcone App Store.</b><o
 Display_SetupOtp_Other_Title=Outro
 Display_SetupOtp_Other_Steps=<b>Encontre um aplicativo de dois fatores compat\u00edvel.</b><ul><li>Tente pesquisar na loja de aplicativos do dispositivo o <b>Google Authenticator</b>.<br/>Muitos dispositivos t\u00eam aplicativos compat\u00edveis.</li><li>Tente procurar um aplicativo que suporte "<b>tokens de seguran\u00e7a TOTP"</b> ou "RFC6238"</li><li>Fa\u00e7a download e instale o aplicativo.</li></ul><b>Em seguida, abra e configure o aplicativo.</b><ol><li>Digite os dados abaixo ou leia o c\u00f3digo conforme as instru\u00e7\u00f5es do aplicativo.</li><li>Depois de ter configurado o aplicativo, clique no bot\u00e3o Continuar.</li></ol>
 Display_TokenDestination=Destino do Token
+Display_TokenResend=Seu c\u00f3digo de seguran\u00e7a deve chegar imediatamente. Se tiver aguardado por um longo tempo e ainda n\u00e3o tiver recebido um c\u00f3digo, clique no bot\u00e3o de reenviar c\u00f3digo para receber um novo c\u00f3digo.
 Display_UsernameHeader=@User\:ID@
 Display_UsernameFooter=@User\:ID@
 Display_WarnExistingOtpSecretTime=Voc\u00ea j\u00e1 registrou seu dispositivo em <span class\="timestamp">%1%</span>. \u00c9 poss\u00edvel testar o dispositivo atual digitando o c\u00f3digo gerado abaixo. Se continuar, voc\u00ea poder\u00e1 reconfigurar o dispositivo atual.
@@ -238,7 +241,15 @@ Field_VerificationMethodChallengeResponses=Perguntas e Respostas Secretas
 Field_VerificationMethodAttributes=Dados Pessoais
 Field_VerificationMethodRemoteResponses=Respostas Externas
 Field_VerificationMethodNAAF=Autentica\u00e7\u00e3o Avan\u00e7ada
-Field_VerificationMethodOAuth=Autentica\u00e7\u00e3o Externa
+Field_VerificationMethodOAuth=Autentica\u00e7\u00e3o OAuth Externa
+Description_VerificationMethodPreviousAuth=
+Description_VerificationMethodToken=
+Description_VerificationMethodOTP=
+Description_VerificationMethodChallengeResponses=
+Description_VerificationMethodAttributes=
+Description_VerificationMethodRemoteResponses=
+Description_VerificationMethodNAAF=
+Description_VerificationMethodOAuth=
 Field_Placeholder_Answer=Resposta
 Long_Title_ActivateUser=Ative uma conta pr\u00e9-configurada e estabele\u00e7a uma nova senha.
 Long_Title_Admin=Fun\u00e7\u00f5es administrativas
