--- a/src/main/resources/password/pwm/i18n/Error_ca.properties
+++ b/src/main/resources/password/pwm/i18n/Error_ca.properties
@@ -158,6 +158,7 @@ Error_StartupError=Hi ha hagut un error mentre s'iniciava l'aplicaci\u00f3. Comp
 Error_EnvironmentError=Un error amb l'entorn de l'aplicaci\u00f3 ha fet que l'aplicaci\u00f3 no s'hagi iniciat.
 Error_ApplicationNotRunning=Aquesta funcionalitat no estar\u00e0 disponible fins que la configuraci\u00f3 de l'aplicaci\u00f3 s'hagi restringit.
 Error_EmailSendFailure=S'ha produ\u00eft un error en enviar l'element de correu electr\u00f2nic %1%. Error: %2%
+Error_PasswordOnlyBad=La contrasenya \u00e9s incorrecta; torneu-ho a provar.
 
 Error_RemoteErrorValue=Error remot: %1%
 
