--- a/src/main/resources/password/pwm/i18n/Error_da.properties
+++ b/src/main/resources/password/pwm/i18n/Error_da.properties
@@ -158,6 +158,7 @@ Error_StartupError=Der opstod en fejl under opstart af programmet. Se oplysninge
 Error_EnvironmentError=En fejl med programmilj\u00f8et forhindrer programmet i at starte.
 Error_ApplicationNotRunning=Denne funktionalitet er ikke tilg\u00e6ngelig, f\u00f8r programkonfigurationen er begr\u00e6nset.
 Error_EmailSendFailure=Fejl under afsendelse af e-mailelementet %1%, fejl: %2%
+Error_PasswordOnlyBad=Adgangskoden er forkert. Pr\u00f8v igen.
 
 Error_RemoteErrorValue=Fjernfejl: %1%
 
