--- a/src/main/resources/password/pwm/i18n/Error_de.properties
+++ b/src/main/resources/password/pwm/i18n/Error_de.properties
@@ -158,6 +158,7 @@ Error_StartupError=Fehler beim Starten der Anwendung. Weitere Informationen find
 Error_EnvironmentError=Ein Fehler der Anwendungsumgebung hat das Starten der Anwendung verhindert.
 Error_ApplicationNotRunning=Diese Funktion ist erst verf\u00fcgbar, wenn die Anwendungskonfiguration eingeschr\u00e4nkt ist.
 Error_EmailSendFailure=Fehler beim Senden des Email-Elements %1%, Fehler: %2%
+Error_PasswordOnlyBad=Falsches Passwort. Versuchen Sie es erneut.
 
 Error_RemoteErrorValue=Remotefehler: %1%
 
