--- a/src/main/resources/password/pwm/i18n/Error_es.properties
+++ b/src/main/resources/password/pwm/i18n/Error_es.properties
@@ -158,6 +158,7 @@ Error_StartupError=Error al iniciar la aplicaci\u00f3n. Consulte los archivos de
 Error_EnvironmentError=Un error en el entorno de la aplicaci\u00f3n ha impedido que la aplicaci\u00f3n se inicie.
 Error_ApplicationNotRunning=Esta funcionalidad no estar\u00e1 disponible hasta que se limite la configuraci\u00f3n de la aplicaci\u00f3n.
 Error_EmailSendFailure=Error al enviar el elemento de correo electr\u00f3nico %1%, error: %2%
+Error_PasswordOnlyBad=Contrase\u00f1a incorrecta. Int\u00e9ntelo de nuevo.
 
 Error_RemoteErrorValue=Error remoto: %1%
 
