--- a/src/main/resources/password/pwm/i18n/Error_fr.properties
+++ b/src/main/resources/password/pwm/i18n/Error_fr.properties
@@ -158,6 +158,7 @@ Error_StartupError=Une erreur s'est produite au d\u00e9marrage de l'application.
 Error_EnvironmentError=Une erreur li\u00e9e \u00e0 l'environnement de l'application a emp\u00each\u00e9 le d\u00e9marrage de cette derni\u00e8re.
 Error_ApplicationNotRunning=Cette fonctionnalit\u00e9 n'est pas disponible tant que la configuration de l'application est restreinte.
 Error_EmailSendFailure=Une erreur s'est produite lors de l'envoi du courrier \u00e9lectronique %1%. Erreur : %2%
+Error_PasswordOnlyBad=Le mot de passe est incorrect. Veuillez r\u00e9essayer.
 
 Error_RemoteErrorValue=Erreur distante : %1%
 
