--- a/src/main/resources/password/pwm/i18n/Error_nl.properties
+++ b/src/main/resources/password/pwm/i18n/Error_nl.properties
@@ -158,6 +158,7 @@ Error_StartupError=Er is een fout opgetreden bij het starten van de toepassing. 
 Error_EnvironmentError=Als gevolg van een fout met de toepassingsomgeving kan de toepassing niet worden gestart.
 Error_ApplicationNotRunning=Deze functionaliteit is pas beschikbaar als de toepassingsconfiguratie wordt beperkt.
 Error_EmailSendFailure=Fout bij verzenden van e-mailitem %1%, fout: %2%
+Error_PasswordOnlyBad=Het wachtwoord is onjuist. Probeer het opnieuw.
 
 Error_RemoteErrorValue=Externe fout: %1%
 
