--- a/src/main/resources/password/pwm/i18n/Error_pl.properties
+++ b/src/main/resources/password/pwm/i18n/Error_pl.properties
@@ -158,6 +158,7 @@ Error_StartupError=Wyst\u0105pi\u0142 b\u0142\u0105d podczas uruchamiania aplika
 Error_EnvironmentError=B\u0142\u0105d \u015brodowiska aplikacji uniemo\u017cliwi\u0142 uruchomienie aplikacji.
 Error_ApplicationNotRunning=Ta funkcja jest niedost\u0119pna, dop\u00f3ki konfiguracja aplikacji jest ograniczona.
 Error_EmailSendFailure=B\u0142\u0105d podczas wysy\u0142ania elementu poczty e-mail %1%, b\u0142\u0105d: %2%
+Error_PasswordOnlyBad=Nieprawid\u0142owe has\u0142o. Spr\u00f3buj ponownie.
 
 Error_RemoteErrorValue=B\u0142\u0105d zdalny: %1%
 
