--- a/src/main/resources/password/pwm/i18n/Error_sv.properties
+++ b/src/main/resources/password/pwm/i18n/Error_sv.properties
@@ -158,6 +158,7 @@ Error_StartupError=Ett fel intr\u00e4ffade n\u00e4r programmet startades. Mer in
 Error_EnvironmentError=Ett fel med programmilj\u00f6n hindrade programmet fr\u00e5n att starta.
 Error_ApplicationNotRunning=Denna funktion \u00e4r inte tillg\u00e4nglig f\u00f6rr\u00e4n programmets konfiguration begr\u00e4nsats.
 Error_EmailSendFailure=Fel n\u00e4r e-postobjekt skickades %1%, fel: %2%
+Error_PasswordOnlyBad=L\u00f6senordet \u00e4r felaktigt. F\u00f6rs\u00f6k igen.
 
 Error_RemoteErrorValue=Fj\u00e4rrfel: %1%
 
