--- a/src/main/resources/password/pwm/i18n/Error_zh_CN.properties
+++ b/src/main/resources/password/pwm/i18n/Error_zh_CN.properties
@@ -158,6 +158,7 @@ Error_StartupError=\u542f\u52a8\u8be5\u5e94\u7528\u7a0b\u5e8f\u65f6\u51fa\u9519\
 Error_EnvironmentError=\u5e94\u7528\u7a0b\u5e8f\u73af\u5883\u51fa\u9519\uff0c\u5bfc\u81f4\u8be5\u5e94\u7528\u7a0b\u5e8f\u65e0\u6cd5\u542f\u52a8\u3002
 Error_ApplicationNotRunning=\u5728\u5bf9\u5e94\u7528\u7a0b\u5e8f\u914d\u7f6e\u8fdb\u884c\u9650\u5236\u4e4b\u524d\uff0c\u6b64\u529f\u80fd\u4e0d\u53ef\u7528\u3002
 Error_EmailSendFailure=\u53d1\u9001\u7535\u5b50\u90ae\u4ef6\u9879 %1% \u65f6\u51fa\u9519\uff0c\u9519\u8bef\uff1a%2%
+Error_PasswordOnlyBad=\u53e3\u4ee4\u4e0d\u6b63\u786e\uff0c\u8bf7\u91cd\u8bd5\u3002
 
 Error_RemoteErrorValue=\u8fdc\u7a0b\u9519\u8bef\uff1a%1%
 
