--- a/src/main/resources/password/pwm/i18n/Error_zh_TW.properties
+++ b/src/main/resources/password/pwm/i18n/Error_zh_TW.properties
@@ -158,6 +158,7 @@ Error_StartupError=\u555f\u52d5\u61c9\u7528\u7a0b\u5f0f\u6642\u767c\u751f\u932f\
 Error_EnvironmentError=\u61c9\u7528\u7a0b\u5f0f\u74b0\u5883\u7684\u932f\u8aa4\u5df2\u9020\u6210\u61c9\u7528\u7a0b\u5f0f\u7121\u6cd5\u555f\u52d5\u3002
 Error_ApplicationNotRunning=\u8acb\u5148\u9650\u5236\u61c9\u7528\u7a0b\u5f0f\u7d44\u614b\uff0c\u624d\u80fd\u4f7f\u7528\u6b64\u529f\u80fd\u3002
 Error_EmailSendFailure=\u50b3\u9001\u96fb\u5b50\u90f5\u4ef6\u9805\u76ee\u6642\u767c\u751f\u932f\u8aa4 %1%\uff0c\u932f\u8aa4\uff1a%2%
+Error_PasswordOnlyBad=\u5bc6\u78bc\u4e0d\u6b63\u78ba\uff0c\u8acb\u518d\u8a66\u4e00\u6b21\u3002
 
 Error_RemoteErrorValue=\u9060\u7aef\u932f\u8aa4\uff1a%1%
 
