--- a/src/main/resources/password/pwm/i18n/Message_es.properties
+++ b/src/main/resources/password/pwm/i18n/Message_es.properties
@@ -158,6 +158,7 @@ Success_CreateGuest=La nueva cuenta de usuario guest se ha creado correctamente.
 Success_CreateUser=Su nueva cuenta de usuario se ha creado correctamente.
 Success_NewUserForm=Su cuenta est\u00e1 lista para ser creada. Contin\u00fae cuando est\u00e9 preparado.
 Success_PasswordChange=Se ha cambiado correctamente la contrase\u00f1a.
+Success_ChangedHelpdeskPassword=Se ha cambiado correctamente la contrase\u00f1a del usuario 
 Success_PasswordReset=La contrase\u00f1a para %1% se ha establecido correctamente.
 Success_PasswordSend=Se ha enviado su nueva contrase\u00f1a a %1%. Cierre esta ventana y luego entre utilizando la nueva contrase\u00f1a.
 Success_ResponsesMeetRules=Sus respuestas cumplen los requisitos. Haga clic en Guardar respuestas cuando est\u00e9 listo.
@@ -169,3 +170,4 @@ Success_UpdateProfile=La informaci\u00f3n del usuario se ha actualizado correcta
 Success_UpdateForm=Su perfil est\u00e1 listo para ser actualizado. Contin\u00fae cuando est\u00e9 preparado.
 Success_Action=La acci\u00f3n %1% se ha completado correctamente.
 Success_OtpSetup=Se ha realizado correctamente la inscripci\u00f3n de su dispositivo.
+Success_TokenResend=Le hemos enviado un c\u00f3digo de seguridad nuevo.
