--- a/src/main/resources/password/pwm/i18n/Message_it.properties
+++ b/src/main/resources/password/pwm/i18n/Message_it.properties
@@ -158,6 +158,7 @@ Success_CreateGuest=Creazione del nuovo account guest eseguita. Se \u00e8 stato 
 Success_CreateUser=Creazione del nuovo account utente eseguita.
 Success_NewUserForm=Account pronto per la creazione. Quando si \u00e8 pronti, continuare.
 Success_PasswordChange=Modifica della password eseguita.
+Success_ChangedHelpdeskPassword=Modifica della password utente eseguita 
 Success_PasswordReset=Impostazione della password per %1% eseguita.
 Success_PasswordSend=La nuova password \u00e8 stata inviata a %1%. Chiudere questa finestra ed eseguire il login utilizzando la nuova password.
 Success_ResponsesMeetRules=Le risposte soddisfano i requisiti. Quando si \u00e8 pronti, fare clic su Salva risposte.
@@ -169,3 +170,4 @@ Success_UpdateProfile=Le informazioni dell'utente sono state aggiornate.
 Success_UpdateForm=Profilo pronto per l'aggiornamento. Quando si \u00e8 pronti, continuare.
 Success_Action=L'azione %1% \u00e8 stata eseguita.
 Success_OtpSetup=La registrazione del dispositivo \u00e8 stata eseguita.
+Success_TokenResend=Nuovo codice di sicurezza inviato.
