--- a/src/main/resources/password/pwm/i18n/Message_nl.properties
+++ b/src/main/resources/password/pwm/i18n/Message_nl.properties
@@ -157,7 +157,8 @@ Success_ClearResponse=Uw geheime vragen en antwoorden zijn verwijderd.
 Success_CreateGuest=De nieuwe gastaccount is gemaakt. De gastgebruiker ontvangt een bericht als het e-mailadres is ingevoerd. Mogelijk moet de gastaccount nog worden geactiveerd.
 Success_CreateUser=Uw nieuwe gebruikersaccount is gemaakt.
 Success_NewUserForm=Uw account kan worden gemaakt. Ga verder als u gereed bent.
-Success_PasswordChange=Uw wachtwoord is gewijzigd.
+Success_PasswordChange=Het wachtwoord is gewijzigd.
+Success_ChangedHelpdeskPassword=Het wachtwoord voor de gebruiker is gewijzigd 
 Success_PasswordReset=Het wachtwoord voor %1% is ingesteld.
 Success_PasswordSend=Uw nieuwe wachtwoord is verzonden naar %1%. Sluit dit venster en gebruik het nieuwe wachtwoord om u opnieuw aan te melden.
 Success_ResponsesMeetRules=Uw antwoorden voldoen aan de vereisten. Klik op Antwoorden opslaan als u gereed bent.
@@ -169,3 +170,4 @@ Success_UpdateProfile=Uw gebruikersgegevens zijn bijgewerkt.
 Success_UpdateForm=Uw profiel kan worden bijgewerkt. Ga verder als u gereed bent.
 Success_Action=De actie %1% is voltooid.
 Success_OtpSetup=Uw apparaatinschrijving is voltooid.
+Success_TokenResend=Er is een nieuwe beveiligingscode naar u verzonden.
