--- a/src/main/resources/password/pwm/i18n/Message_sv.properties
+++ b/src/main/resources/password/pwm/i18n/Message_sv.properties
@@ -157,7 +157,8 @@ Success_ClearResponse=Dina hemliga fr\u00e5gor och svar har tagits bort.
 Success_CreateGuest=G\u00e4stkontot har skapats. G\u00e4stanv\u00e4ndaren f\u00e5r en avisering om en e-postadress har angetts. G\u00e4stkontot kan fortfarande beh\u00f6va aktiveras.
 Success_CreateUser=Ditt nya anv\u00e4ndarkonto har skapats.
 Success_NewUserForm=Ditt konto \u00e4r klart att skapas. Forts\u00e4tt n\u00e4r du \u00e4r klar.
-Success_PasswordChange=Ditt l\u00f6senord har \u00e4ndrats.
+Success_PasswordChange=L\u00f6senordet har \u00e4ndrats.
+Success_ChangedHelpdeskPassword=L\u00f6senordet har \u00e4ndrats f\u00f6r anv\u00e4ndaren 
 Success_PasswordReset=L\u00f6senordet f\u00f6r %1% har angetts.
 Success_PasswordSend=Ditt nya l\u00f6senord har skickats till %1%. St\u00e4ng det h\u00e4r f\u00f6nstret och logga in med ditt nya l\u00f6senord.
 Success_ResponsesMeetRules=Dina svar uppfyller kraven. Klicka p\u00e5 Spara svar n\u00e4r du \u00e4r klar.
@@ -169,3 +170,4 @@ Success_UpdateProfile=Din anv\u00e4ndarinformation har uppdaterats.
 Success_UpdateForm=Din profil \u00e4r klar att uppdateras. Forts\u00e4tt n\u00e4r du \u00e4r klar.
 Success_Action=\u00c5tg\u00e4rden %1% har slutf\u00f6rts.
 Success_OtpSetup=Din enhetsregistrering \u00e4r klar.
+Success_TokenResend=En ny s\u00e4kerhetskod har skickats till dig.
