--- a/src/main/resources/password/pwm/i18n/Display_de.properties
+++ b/src/main/resources/password/pwm/i18n/Display_de.properties
@@ -1,3 +1,4 @@
+#Tue, 20 Jun 2017 12:52:39 -0400
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -55,6 +56,7 @@ Button_Show=Anzeigen
 Button_Show_Responses=Antworten anzeigen
 Button_Skip=\u00dcberspringen
 Button_SMS=SMS
+Button_TokenResend=Code neu senden
 Button_Unlock=Entsperren
 Button_UnlockPassword=Passwort entsperren
 Button_Update=Aktualisieren
@@ -165,6 +167,7 @@ Display_SetupOtp_iPhone_Steps=<b>Tippen Sie auf dem iPhone auf das App Store-Sym
 Display_SetupOtp_Other_Title=Sonstige
 Display_SetupOtp_Other_Steps=<b>Suchen Sie eine kompatible Zwei-Faktoren-App.</b><ul><li>Suchen Sie im App-Store Ihres Ger\u00e4ts nach <b>Google Authenticator</b>.<br/>F\u00fcr viele Ger\u00e4te sind kompatible Apps verf\u00fcgbar.</li><li>Suchen Sie nach einer App, die "<b>TOTP-Sicherheitstoken"</b> oder "RFC6238" unterst\u00fctzt</li><li> Laden Sie die Anwendung herunter und installieren Sie sie.</li></ul><b>\u00d6ffnen und konfigurieren Sie dann die App.</b><ol><li>Geben Sie die Daten unten ein oder scannen Sie den Code wie von der App angewiesen.</li><li>Klicken Sie nach der Konfiguration der App auf die Schaltfl\u00e4che 'Weiter'.</li></ol>
 Display_TokenDestination=Token-Ziel
+Display_TokenResend=Der Sicherheitscode sollte kurz nach der Anforderung ankommen. Wenn Sie bereits eine gewisse Zeit gewartet haben und keinen Code erhalten haben, klicken Sie auf die Schaltfl\u00e4che 'Code neu senden', damit Ihnen ein neuer Code gesendet wird.
 Display_UsernameHeader=@User\:ID@
 Display_UsernameFooter=@User\:ID@
 Display_WarnExistingOtpSecretTime=Sie haben das Ger\u00e4t bereits am <span class\="timestamp">%1%</span> registriert. Um das aktuelle Ger\u00e4t zu testen, geben Sie unten den generierten Code ein. Wenn Sie fortfahren, k\u00f6nnen Sie das aktuelle Ger\u00e4t neu konfigurieren.
@@ -238,7 +241,15 @@ Field_VerificationMethodChallengeResponses=Sicherheitsfragen und -antworten
 Field_VerificationMethodAttributes=Pers\u00f6nliche Daten
 Field_VerificationMethodRemoteResponses=Externe Antworten
 Field_VerificationMethodNAAF=Advanced Authentication
-Field_VerificationMethodOAuth=Externe Authentifizierung
+Field_VerificationMethodOAuth=Externe OAuth-Authentifizierung
+Description_VerificationMethodPreviousAuth=
+Description_VerificationMethodToken=
+Description_VerificationMethodOTP=
+Description_VerificationMethodChallengeResponses=
+Description_VerificationMethodAttributes=
+Description_VerificationMethodRemoteResponses=
+Description_VerificationMethodNAAF=
+Description_VerificationMethodOAuth=
 Field_Placeholder_Answer=Antwort
 Long_Title_ActivateUser=Vorkonfiguriertes Konto aktivieren und ein neues Passwort erstellen.
 Long_Title_Admin=Verwaltungsfunktionen
