--- a/src/main/resources/password/pwm/i18n/Display_es.properties
+++ b/src/main/resources/password/pwm/i18n/Display_es.properties
@@ -1,3 +1,4 @@
+#Tue, 20 Jun 2017 12:52:39 -0400
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -55,6 +56,7 @@ Button_Show=Mostrar
 Button_Show_Responses=Mostrar respuestas
 Button_Skip=Omitir
 Button_SMS=SMS
+Button_TokenResend=Volver a enviar c\u00f3digo
 Button_Unlock=Desbloquear
 Button_UnlockPassword=Desbloquear contrase\u00f1a
 Button_Update=Actualizar
@@ -165,6 +167,7 @@ Display_SetupOtp_iPhone_Steps=<b>En su iPhone, toque el icono de App Store.</b><
 Display_SetupOtp_Other_Title=Otro
 Display_SetupOtp_Other_Steps=<b>Busque una aplicaci\u00f3n compatible de dos factores.</b><ul><li>Pruebe a buscar en la tienda de aplicaciones de su dispositivo la aplicaci\u00f3n <b>Google Authenticator</b>.<br/>Muchos dispositivos tienen aplicaciones compatibles.</li><li>Trate de buscar una que sea compatible con "<b>testigos de seguridad TOTP"</b> o "RFC6238"</li><li>Descargue e instale la aplicaci\u00f3n.</li></ul>A continuaci\u00f3n, abra y configure la aplicaci\u00f3n.</b><ol><li>Introduzca los datos a continuaci\u00f3n o escanee el c\u00f3digo cuando se lo indique la aplicaci\u00f3n.</li><li>Una vez que haya configurado la aplicaci\u00f3n, haga clic en el bot\u00f3n para continuar.</li></ol><b>
 Display_TokenDestination=Destino del testigo
+Display_TokenResend=Su c\u00f3digo de seguridad debe llegar inmediatamente. Si lleva esperando un rato y a\u00fan no ha recibido un c\u00f3digo, haga clic en el bot\u00f3n Volver a enviar c\u00f3digo para recibir un c\u00f3digo nuevo.
 Display_UsernameHeader=@User\:ID@
 Display_UsernameFooter=@User\:ID@
 Display_WarnExistingOtpSecretTime=Ya ha inscrito su dispositivo en <span class\="timestamp">%1%</span>. Puede probar su dispositivo actual introduciendo el c\u00f3digo generado a continuaci\u00f3n. Si contin\u00faa, puede volver a configurar su dispositivo actual.
@@ -238,7 +241,15 @@ Field_VerificationMethodChallengeResponses=Preguntas y respuestas secretas
 Field_VerificationMethodAttributes=Datos personales
 Field_VerificationMethodRemoteResponses=Respuestas externas
 Field_VerificationMethodNAAF=Advanced Authentication
-Field_VerificationMethodOAuth=Autenticaci\u00f3n externa
+Field_VerificationMethodOAuth=Autenticaci\u00f3n OAuth externa
+Description_VerificationMethodPreviousAuth=
+Description_VerificationMethodToken=
+Description_VerificationMethodOTP=
+Description_VerificationMethodChallengeResponses=
+Description_VerificationMethodAttributes=
+Description_VerificationMethodRemoteResponses=
+Description_VerificationMethodNAAF=
+Description_VerificationMethodOAuth=
 Field_Placeholder_Answer=Respuesta
 Long_Title_ActivateUser=Active una cuenta preconfigurada y establezca una contrase\u00f1a nueva.
 Long_Title_Admin=Funciones administrativas
