--- a/src/main/resources/password/pwm/i18n/Display_fr.properties
+++ b/src/main/resources/password/pwm/i18n/Display_fr.properties
@@ -1,3 +1,4 @@
+#Tue, 20 Jun 2017 12:52:39 -0400
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -55,6 +56,7 @@ Button_Show=Afficher
 Button_Show_Responses=Afficher les r\u00e9ponses
 Button_Skip=Ignorer
 Button_SMS=SMS
+Button_TokenResend=Renvoyer un code
 Button_Unlock=D\u00e9verrouiller
 Button_UnlockPassword=Mot de passe de d\u00e9verrouillage
 Button_Update=Mettre \u00e0 jour
@@ -165,6 +167,7 @@ Display_SetupOtp_iPhone_Steps=<b>Sur votre iPhone, appuyez sur l'ic\u00f4ne App 
 Display_SetupOtp_Other_Title=Autre
 Display_SetupOtp_Other_Steps=<b>Recherchez une application \u00e0 deux facteurs compatible.</b><ul><li>Essayez de trouver <b>Google Authenticator</b> dans l'App Store de votre appareil.<br/>De nombreux p\u00e9riph\u00e9riques ont des applications compatibles.</li><li>Essayez de trouver une application qui prend en charge les "<b>jetons de s\u00e9curit\u00e9 TOTP</b>" ou "RFC6238".</li><li>T\u00e9l\u00e9chargez et installez l'application.</li></ul><b>Ensuite, ouvrez et configurez l'application.</b><ol><li>Entrez les donn\u00e9es ci-dessous ou scannez le code en suivant les instructions de l'application.</li><li>Une fois l'application configur\u00e9e, cliquez sur le bouton Continuer.</li></ol>
 Display_TokenDestination=Destination du jeton
+Display_TokenResend=Vous devriez recevoir imm\u00e9diatement votre code de s\u00e9curit\u00e9. Si vous attendez depuis un moment sans rien recevoir, cliquez sur le bouton Renvoyer pour en recevoir un nouveau.
 Display_UsernameHeader=@User\:ID@
 Display_UsernameFooter=@User\:ID@
 Display_WarnExistingOtpSecretTime=Vous avez d\u00e9j\u00e0 inscrit votre p\u00e9riph\u00e9rique le <span class\="timestamp">%1%</span>. Vous pouvez tester votre p\u00e9riph\u00e9rique actuel en introduisant le code g\u00e9n\u00e9r\u00e9 ci-dessous. Si vous continuez, vous pouvez reconfigurer votre p\u00e9riph\u00e9rique actuel.
@@ -238,7 +241,15 @@ Field_VerificationMethodChallengeResponses=Questions et r\u00e9ponses secr\u00e8
 Field_VerificationMethodAttributes=Donn\u00e9es personnelles
 Field_VerificationMethodRemoteResponses=R\u00e9ponses externes
 Field_VerificationMethodNAAF=Advanced Authentication
-Field_VerificationMethodOAuth=Authentification externe
+Field_VerificationMethodOAuth=Authentification OAuth externe
+Description_VerificationMethodPreviousAuth=
+Description_VerificationMethodToken=
+Description_VerificationMethodOTP=
+Description_VerificationMethodChallengeResponses=
+Description_VerificationMethodAttributes=
+Description_VerificationMethodRemoteResponses=
+Description_VerificationMethodNAAF=
+Description_VerificationMethodOAuth=
 Field_Placeholder_Answer=R\u00e9ponse
 Long_Title_ActivateUser=Activez un compte pr\u00e9configur\u00e9 et \u00e9tablissez un nouveau mot de passe.
 Long_Title_Admin=Fonctions administratives
