--- a/src/main/resources/password/pwm/i18n/Display_it.properties
+++ b/src/main/resources/password/pwm/i18n/Display_it.properties
@@ -1,3 +1,4 @@
+#Tue, 20 Jun 2017 12:52:39 -0400
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -55,6 +56,7 @@ Button_Show=Mostra
 Button_Show_Responses=Mostra risposte
 Button_Skip=Ignora
 Button_SMS=SMS
+Button_TokenResend=Reinvia codice
 Button_Unlock=Sblocca
 Button_UnlockPassword=Sblocca password
 Button_Update=Aggiorna
@@ -165,6 +167,7 @@ Display_SetupOtp_iPhone_Steps=<b>Toccare l'icona di App Store sull'iPhone.</b><o
 Display_SetupOtp_Other_Title=Altri
 Display_SetupOtp_Other_Steps=<b>Cercare un'app compatibile a due fattori.</b><ul><li>Cercare <b>Google Authenticator</b> nell'app store del proprio dispositivo.<br/>Sono disponibili app compatibili per numerosi dispositivi.</li><li>Provare a cercare un'app che supporti i "<b>token di sicurezza TOTP</b>" o "RFC6238"</li><li>Effettuare il download e installare l'applicazione.</li></ul><b>Al termine dell'installazione, aprire e configurare l'app.</b><ol><li>Immettere i dati riportati di seguito o effettuare la scansione del codice a barre seguendo le istruzioni dell'app.</li><li>Dopo aver configurato l'app, fare clic sul pulsante Continua.</li></ol>
 Display_TokenDestination=Destinazione token
+Display_TokenResend=Il codice di sicurezza dovrebbe arrivare immediatamente. Se dopo aver atteso il codice non \u00e8 stato ricevuto, fare clic sul pulsante Reinvia codice per ricevere un nuovo codice.
 Display_UsernameHeader=@User\:ID@
 Display_UsernameFooter=@User\:ID@
 Display_WarnExistingOtpSecretTime=Il dispositivo \u00e8 gi\u00e0 stato registrato il <span class\="timestamp">%1%</span>. Per eseguire una prova del dispositivo attuale, digitare di seguito il codice generato. Continuando \u00e8 possibile riconfigurare il dispositivo attuale.
@@ -238,7 +241,15 @@ Field_VerificationMethodChallengeResponses=Domande e risposte segrete
 Field_VerificationMethodAttributes=Dati personali
 Field_VerificationMethodRemoteResponses=Risposte esterne
 Field_VerificationMethodNAAF=Advanced Authentication
-Field_VerificationMethodOAuth=Autenticazione esterna
+Field_VerificationMethodOAuth=Autenticazione OAuth esterna
+Description_VerificationMethodPreviousAuth=
+Description_VerificationMethodToken=
+Description_VerificationMethodOTP=
+Description_VerificationMethodChallengeResponses=
+Description_VerificationMethodAttributes=
+Description_VerificationMethodRemoteResponses=
+Description_VerificationMethodNAAF=
+Description_VerificationMethodOAuth=
 Field_Placeholder_Answer=Risposta
 Long_Title_ActivateUser=Attivare un account pre-configurato e impostare una nuova password.
 Long_Title_Admin=Funzioni amministrative
