--- a/src/main/resources/password/pwm/i18n/Display_ja.properties
+++ b/src/main/resources/password/pwm/i18n/Display_ja.properties
@@ -1,3 +1,4 @@
+#Tue, 20 Jun 2017 12:52:39 -0400
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -55,6 +56,7 @@ Button_Show=\u8868\u793a
 Button_Show_Responses=\u56de\u7b54\u3092\u8868\u793a\u3059\u308b
 Button_Skip=\u30b9\u30ad\u30c3\u30d7
 Button_SMS=SMS
+Button_TokenResend=\u30b3\u30fc\u30c9\u306e\u518d\u9001\u4fe1
 Button_Unlock=\u30ed\u30c3\u30af\u89e3\u9664
 Button_UnlockPassword=\u30d1\u30b9\u30ef\u30fc\u30c9\u306e\u30ed\u30c3\u30af\u89e3\u9664
 Button_Update=\u66f4\u65b0
@@ -165,6 +167,7 @@ Display_SetupOtp_iPhone_Steps=<b>\u3054\u4f7f\u7528\u306eiPhone\u3067\u3001App S
 Display_SetupOtp_Other_Title=\u305d\u306e\u4ed6
 Display_SetupOtp_Other_Steps=<b>\u4e92\u63db\u6027\u306e\u3042\u308b2\u6bb5\u968e\u8a8d\u8a3c\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u3092\u898b\u3064\u3051\u307e\u3059\u3002</b><ul><li>\u3054\u4f7f\u7528\u306e\u30c7\u30d0\u30a4\u30b9\u306e\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u30b9\u30c8\u30a2\u3067<b>Google Authenticator</b>\u3092\u691c\u7d22\u3057\u307e\u3059\u3002<br/>\u591a\u304f\u306e\u30c7\u30d0\u30a4\u30b9\u3067\u306f\u3001\u4e92\u63db\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u304c\u3042\u308a\u307e\u3059\u3002</li><li>\u300c<b>TOTP\u30bb\u30ad\u30e5\u30ea\u30c6\u30a3\u30fc\u30c8\u30fc\u30af\u30f3\u300d</b>\u307e\u305f\u306f\u300cRFC6238\u300d\u3092\u30b5\u30dd\u30fc\u30c8\u3059\u308b\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u3092\u63a2\u3057\u3066\u307f\u3066\u304f\u3060\u3055\u3044\u3002</li><li>\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u3092\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3057\u3066\u30a4\u30f3\u30b9\u30c8\u30fc\u30eb\u3057\u307e\u3059\u3002</li></ul><b>\u6b21\u306b\u3001\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u3092\u958b\u3044\u3066\u8a2d\u5b9a\u3057\u307e\u3059\u3002</b><ol><li>\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u306e\u624b\u9806\u306b\u5f93\u3063\u3066\u3001\u4e0b\u306e\u30c7\u30fc\u30bf\u3092\u5165\u529b\u3059\u308b\u304b\u3001\u30b3\u30fc\u30c9\u3092\u30b9\u30ad\u30e3\u30f3\u3057\u307e\u3059\u3002</li><li>\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u3092\u8a2d\u5b9a\u3057\u305f\u3089\u3001\u6b21\u3078\u9032\u3080\u30dc\u30bf\u30f3\u3092\u30af\u30ea\u30c3\u30af\u3057\u307e\u3059\u3002</li></ol>
 Display_TokenDestination=\u30c8\u30fc\u30af\u30f3\u306e\u5b9b\u5148
+Display_TokenResend=\u30bb\u30ad\u30e5\u30ea\u30c6\u30a3\u30b3\u30fc\u30c9\u304c\u9593\u3082\u306a\u304f\u9001\u4fe1\u3055\u308c\u307e\u3059\u3002\u3057\u3070\u3089\u304f\u5f85\u3063\u3066\u3082\u30b3\u30fc\u30c9\u3092\u53d7\u4fe1\u3057\u306a\u3044\u5834\u5408\u306f\u3001\uff3b\u30b3\u30fc\u30c9\u306e\u518d\u9001\u4fe1\uff3d\u30dc\u30bf\u30f3\u3092\u30af\u30ea\u30c3\u30af\u3057\u3066\u3001\u65b0\u3057\u3044\u30b3\u30fc\u30c9\u3092\u304a\u53d7\u3051\u53d6\u308a\u304f\u3060\u3055\u3044\u3002
 Display_UsernameHeader=@User\:ID@
 Display_UsernameFooter=@User\:ID@
 Display_WarnExistingOtpSecretTime=\u3054\u4f7f\u7528\u306e\u30c7\u30d0\u30a4\u30b9\u306f\u3001\u3059\u3067\u306b <span class\="timestamp">%1%</span> \u306b\u767b\u9332\u3055\u308c\u3066\u3044\u307e\u3059\u3002\u751f\u6210\u3055\u308c\u305f\u4e0b\u306e\u30b3\u30fc\u30c9\u3092\u5165\u529b\u3059\u308b\u3053\u3068\u306b\u3088\u308a\u3001\u73fe\u5728\u4f7f\u7528\u3057\u3066\u3044\u308b\u30c7\u30d0\u30a4\u30b9\u3092\u30c6\u30b9\u30c8\u3067\u304d\u307e\u3059\u3002\u7d9a\u884c\u3059\u308b\u3068\u3001\u73fe\u5728\u4f7f\u7528\u3057\u3066\u3044\u308b\u30c7\u30d0\u30a4\u30b9\u3092\u518d\u8a2d\u5b9a\u3067\u304d\u307e\u3059\u3002
@@ -238,7 +241,15 @@ Field_VerificationMethodChallengeResponses=\u79d8\u5bc6\u306e\u8cea\u554f\u3068\
 Field_VerificationMethodAttributes=\u500b\u4eba\u30c7\u30fc\u30bf
 Field_VerificationMethodRemoteResponses=\u5916\u90e8\u5fdc\u7b54
 Field_VerificationMethodNAAF=Advanced Authentication
-Field_VerificationMethodOAuth=\u5916\u90e8\u8a8d\u8a3c
+Field_VerificationMethodOAuth=\u5916\u90e8OAuth\u8a8d\u8a3c
+Description_VerificationMethodPreviousAuth=
+Description_VerificationMethodToken=
+Description_VerificationMethodOTP=
+Description_VerificationMethodChallengeResponses=
+Description_VerificationMethodAttributes=
+Description_VerificationMethodRemoteResponses=
+Description_VerificationMethodNAAF=
+Description_VerificationMethodOAuth=
 Field_Placeholder_Answer=\u7b54\u3048
 Long_Title_ActivateUser=\u4e8b\u524d\u8a2d\u5b9a\u30a2\u30ab\u30a6\u30f3\u30c8\u3092\u6709\u52b9\u306b\u3057\u3066\u3001\u65b0\u3057\u3044\u30d1\u30b9\u30ef\u30fc\u30c9\u3092\u8a2d\u5b9a\u3057\u307e\u3059\u3002
 Long_Title_Admin=\u7ba1\u7406\u6a5f\u80fd
