--- a/src/main/resources/password/pwm/i18n/Display_zh_TW.properties
+++ b/src/main/resources/password/pwm/i18n/Display_zh_TW.properties
@@ -1,3 +1,4 @@
+#Tue, 20 Jun 2017 12:52:39 -0400
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -55,6 +56,7 @@ Button_Show=\u986f\u793a
 Button_Show_Responses=\u986f\u793a\u56de\u61c9
 Button_Skip=\u8df3\u904e
 Button_SMS=\u7c21\u8a0a
+Button_TokenResend=\u91cd\u65b0\u50b3\u9001\u4ee3\u78bc
 Button_Unlock=\u89e3\u9664\u9396\u5b9a
 Button_UnlockPassword=\u89e3\u9664\u9396\u5b9a\u5bc6\u78bc
 Button_Update=\u66f4\u65b0
@@ -165,6 +167,7 @@ Display_SetupOtp_iPhone_Steps=<b>\u5728\u60a8\u7684 iPhone \u4e0a\uff0c\u9ede\u9
 Display_SetupOtp_Other_Title=\u5176\u4ed6
 Display_SetupOtp_Other_Steps=<b>\u5c0b\u627e\u76f8\u5bb9\u7684\u96d9\u56e0\u7d20\u61c9\u7528\u7a0b\u5f0f\u3002</b><ul><li>\u5617\u8a66\u5728\u88dd\u7f6e\u7684\u61c9\u7528\u7a0b\u5f0f\u5546\u5e97\u4e2d\u641c\u5c0b <b>Google Authenticator</b>\u3002<br/>\u8a31\u591a\u88dd\u7f6e\u90fd\u5177\u6709\u76f8\u5bb9\u7684\u61c9\u7528\u7a0b\u5f0f\u3002</li><li>\u5617\u8a66\u5c0b\u627e\u652f\u63f4\u300c<b>TOTP \u5b89\u5168\u6027\u8a18\u865f</b>\u300d\u6216\u300cRFC6238\u300d\u7684\u61c9\u7528\u7a0b\u5f0f</li><li>\u4e0b\u8f09\u4e26\u5b89\u88dd\u61c9\u7528\u7a0b\u5f0f\u3002</li></ul><b>\u7136\u5f8c\u958b\u555f\u4e26\u8a2d\u5b9a\u61c9\u7528\u7a0b\u5f0f\u3002</b><ol><li>\u6839\u64da\u61c9\u7528\u7a0b\u5f0f\u6307\u793a\uff0c\u5728\u4e0b\u65b9\u8f38\u5165\u8cc7\u6599\u6216\u6383\u63cf\u4ee3\u78bc\u3002</li><li>\u8a2d\u5b9a\u61c9\u7528\u7a0b\u5f0f\u5f8c\uff0c\u8acb\u6309\u4e00\u4e0b\u300c\u7e7c\u7e8c\u300d\u6309\u9215\u3002</li></ol>
 Display_TokenDestination=\u8a18\u865f\u76ee\u7684\u5730
+Display_TokenResend=\u60a8\u7684\u5b89\u5168\u4ee3\u78bc\u5c07\u7acb\u523b\u62b5\u9054\u3002\u82e5\u60a8\u5df2\u7b49\u5019\u591a\u6642\u4e14\u5c1a\u672a\u6536\u5230\u4ee3\u78bc\uff0c\u8acb\u6309\u4e00\u4e0b\u91cd\u65b0\u50b3\u9001\u4ee3\u78bc\u6309\u9215\u4ee5\u63a5\u6536\u65b0\u7684\u4ee3\u78bc\u3002
 Display_UsernameHeader=@User\:ID@
 Display_UsernameFooter=@User\:ID@
 Display_WarnExistingOtpSecretTime=\u60a8\u5df2\u65bc <span class\="timestamp">%1%</span> \u8a3b\u518a\u88dd\u7f6e\u3002\u60a8\u53ef\u4ee5\u5728\u4e0b\u65b9\u8f38\u5165\u7522\u751f\u7684\u4ee3\u78bc\uff0c\u4ee5\u6e2c\u8a66\u76ee\u524d\u7684\u88dd\u7f6e\u3002\u5982\u679c\u60a8\u7e7c\u7e8c\u9032\u884c\uff0c\u5247\u53ef\u4ee5\u91cd\u65b0\u8a2d\u5b9a\u76ee\u524d\u7684\u88dd\u7f6e\u3002
@@ -238,7 +241,15 @@ Field_VerificationMethodChallengeResponses=\u79d8\u5bc6\u554f\u984c\u548c\u7b54\
 Field_VerificationMethodAttributes=\u500b\u4eba\u8cc7\u6599
 Field_VerificationMethodRemoteResponses=\u5916\u90e8\u56de\u61c9
 Field_VerificationMethodNAAF=\u9032\u968e\u9a57\u8b49
-Field_VerificationMethodOAuth=\u5916\u90e8\u9a57\u8b49
+Field_VerificationMethodOAuth=\u5916\u90e8 OAuth \u9a57\u8b49
+Description_VerificationMethodPreviousAuth=
+Description_VerificationMethodToken=
+Description_VerificationMethodOTP=
+Description_VerificationMethodChallengeResponses=
+Description_VerificationMethodAttributes=
+Description_VerificationMethodRemoteResponses=
+Description_VerificationMethodNAAF=
+Description_VerificationMethodOAuth=
 Field_Placeholder_Answer=\u7b54\u6848
 Long_Title_ActivateUser=\u555f\u52d5\u9810\u5148\u8a2d\u5b9a\u7684\u5e33\u6236\u4e26\u5efa\u7acb\u65b0\u5bc6\u78bc\u3002
 Long_Title_Admin=\u7ba1\u7406\u529f\u80fd
