--- a/src/main/resources/password/pwm/i18n/Error_ja.properties
+++ b/src/main/resources/password/pwm/i18n/Error_ja.properties
@@ -158,6 +158,7 @@ Error_StartupError=\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u306e\u958b\
 Error_EnvironmentError=\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u74b0\u5883\u3067\u30a8\u30e9\u30fc\u304c\u767a\u751f\u3057\u305f\u305f\u3081\u3001\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u3092\u8d77\u52d5\u3067\u304d\u307e\u305b\u3093\u3002
 Error_ApplicationNotRunning=\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u8a2d\u5b9a\u304c\u5236\u9650\u3055\u308c\u308b\u307e\u3067\u3001\u3053\u306e\u6a5f\u80fd\u306f\u5229\u7528\u3067\u304d\u307e\u305b\u3093\u3002
 Error_EmailSendFailure=\u96fb\u5b50\u30e1\u30fc\u30eb\u9805\u76ee %1% \u306e\u9001\u4fe1\u4e2d\u306b\u30a8\u30e9\u30fc\u304c\u767a\u751f\u3057\u307e\u3057\u305f\u3002\u30a8\u30e9\u30fc: %2%
+Error_PasswordOnlyBad=\u30d1\u30b9\u30ef\u30fc\u30c9\u304c\u9593\u9055\u3063\u3066\u3044\u307e\u3059\u3002\u3082\u3046\u4e00\u5ea6\u3084\u308a\u76f4\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 
 Error_RemoteErrorValue=\u30ea\u30e2\u30fc\u30c8\u30a8\u30e9\u30fc: %1%
 
