--- a/src/main/resources/password/pwm/i18n/Error_pt_BR.properties
+++ b/src/main/resources/password/pwm/i18n/Error_pt_BR.properties
@@ -158,6 +158,7 @@ Error_StartupError=Erro ao iniciar o aplicativo. Consulte os arquivos de registr
 Error_EnvironmentError=O aplicativo n\u00e3o foi inicializado devido a um erro em seu ambiente.
 Error_ApplicationNotRunning=Essa funcionalidade n\u00e3o estar\u00e1 dispon\u00edvel enquanto a configura\u00e7\u00e3o de aplicativo estiver restrita.
 Error_EmailSendFailure=Erro ao enviar item de e-mail %1%, erro: %2%
+Error_PasswordOnlyBad=Senha incorreta, tente novamente.
 
 Error_RemoteErrorValue=Erro Remoto: %1%
 
