--- a/src/main/resources/password/pwm/i18n/Message_fr.properties
+++ b/src/main/resources/password/pwm/i18n/Message_fr.properties
@@ -157,7 +157,8 @@ Success_ClearResponse=Vos questions et r\u00e9ponses secr\u00e8tes ont \u00e9t\u
 Success_CreateGuest=Le nouveau compte invit\u00e9 a \u00e9t\u00e9 cr\u00e9\u00e9. L'utilisateur invit\u00e9 va recevoir une notification si l'adresse \u00e9lectronique a \u00e9t\u00e9 entr\u00e9e. Le compte invit\u00e9 doit peut-\u00eatre encore \u00eatre activ\u00e9.
 Success_CreateUser=Votre nouveau compte utilisateur a \u00e9t\u00e9 cr\u00e9\u00e9.
 Success_NewUserForm=Votre compte est pr\u00eat \u00e0 \u00eatre cr\u00e9\u00e9. Continuez lorsque vous \u00eates pr\u00eat.
-Success_PasswordChange=Votre mot de passe a \u00e9t\u00e9 \u00e9dit\u00e9.
+Success_PasswordChange=Le mot de passe a \u00e9t\u00e9 modifi\u00e9.
+Success_ChangedHelpdeskPassword=Le mot de passe de l'utilisateur a \u00e9t\u00e9 modifi\u00e9 
 Success_PasswordReset=Le mot de passe pour %1% a \u00e9t\u00e9 d\u00e9fini.
 Success_PasswordSend=Votre nouveau mot de passe a \u00e9t\u00e9 envoy\u00e9 \u00e0 %1%. Fermez cette fen\u00eatre et connectez-vous \u00e0 l'aide de votre nouveau mot de passe.
 Success_ResponsesMeetRules=Vos r\u00e9ponses r\u00e9pondent aux exigences. Cliquez sur Enregistrer les r\u00e9ponses lorsque vous \u00eates pr\u00eat.
@@ -169,3 +170,4 @@ Success_UpdateProfile=Vos informations utilisateur ont \u00e9t\u00e9 mises \u00e
 Success_UpdateForm=Votre profil est pr\u00eat \u00e0 \u00eatre mis \u00e0 jour. Continuez lorsque vous \u00eates pr\u00eat.
 Success_Action=L'op\u00e9ration %1% a \u00e9t\u00e9 effectu\u00e9e.
 Success_OtpSetup=L'inscription de votre p\u00e9riph\u00e9rique a \u00e9t\u00e9 effectu\u00e9e.
+Success_TokenResend=Nous venons de vous envoyer un nouveau code de s\u00e9curit\u00e9.
