--- a/src/main/resources/password/pwm/i18n/Message_pl.properties
+++ b/src/main/resources/password/pwm/i18n/Message_pl.properties
@@ -158,6 +158,7 @@ Success_CreateGuest=Nowe konto go\u015bcia zosta\u0142o pomy\u015blnie utworzone
 Success_CreateUser=Nowe konto u\u017cytkownika zosta\u0142o pomy\u015blnie utworzone.
 Success_NewUserForm=Konto jest gotowe do utworzenia. Mo\u017cesz kontynuowa\u0107.
 Success_PasswordChange=Has\u0142o zosta\u0142o pomy\u015blnie zmienione.
+Success_ChangedHelpdeskPassword=Has\u0142o zosta\u0142o pomy\u015blnie zmienione dla u\u017cytkownika 
 Success_PasswordReset=Has\u0142o dla u\u017cytkownika %1% zosta\u0142o pomy\u015blnie ustawione.
 Success_PasswordSend=Nowe has\u0142o zosta\u0142o wys\u0142ane na adres %1%. Zamknij to okno, a nast\u0119pnie zaloguj si\u0119 za pomoc\u0105 nowego has\u0142a.
 Success_ResponsesMeetRules=Te odpowiedzi spe\u0142niaj\u0105 wymagania. Mo\u017cesz klikn\u0105\u0107 przycisk Zapisz odpowiedzi.
@@ -169,3 +170,4 @@ Success_UpdateProfile=Informacje o u\u017cytkowniku zosta\u0142y pomy\u015blnie 
 Success_UpdateForm=Profil jest gotowy do zaktualizowania. Mo\u017cesz kontynuowa\u0107.
 Success_Action=Dzia\u0142anie %1% zosta\u0142o pomy\u015blnie uko\u0144czone.
 Success_OtpSetup=Rejestracja urz\u0105dzenia zosta\u0142a pomy\u015blnie uko\u0144czona.
+Success_TokenResend=Wys\u0142ano Ci nowy kod zabezpiecze\u0144.
