--- a/src/main/resources/password/pwm/i18n/Message_pt_BR.properties
+++ b/src/main/resources/password/pwm/i18n/Message_pt_BR.properties
@@ -157,7 +157,8 @@ Success_ClearResponse=Suas perguntas e respostas secretas foram removidas com \u
 Success_CreateGuest=A nova conta do convidado foi criada com \u00eaxito. O usu\u00e1rio convidado receber\u00e1 uma notifica\u00e7\u00e3o se o endere\u00e7o de e-mail tiver sido informado. A conta do convidado pode ainda precisar ser ativada.
 Success_CreateUser=A nova conta do usu\u00e1rio foi criada com \u00eaxito.
 Success_NewUserForm=Sua conta est\u00e1 pronta para ser criada. Continue quando estiver pronto.
-Success_PasswordChange=Sua senha foi mudada com \u00eaxito.
+Success_PasswordChange=A senha foi mudada com \u00eaxito.
+Success_ChangedHelpdeskPassword=A senha do usu\u00e1rio foi mudada com \u00eaxito 
 Success_PasswordReset=A senha para %1% foi definida com \u00eaxito.
 Success_PasswordSend=Sua nova senha foi enviada para %1%. Feche esta janela e efetue login usando a nova senha.
 Success_ResponsesMeetRules=Suas respostas cumprem os requisitos. Clique em Gravar Respostas quando estiver pronto.
@@ -169,3 +170,4 @@ Success_UpdateProfile=As informa\u00e7\u00f5es do usu\u00e1rio foram atualizadas
 Success_UpdateForm=O seu perfil est\u00e1 pronto para ser atualizado. Continue quando estiver pronto.
 Success_Action=A a\u00e7\u00e3o %1% foi conclu\u00edda com \u00eaxito.
 Success_OtpSetup=A inscri\u00e7\u00e3o do dispositivo foi conclu\u00edda com \u00eaxito.
+Success_TokenResend=Um novo c\u00f3digo de seguran\u00e7a foi enviado.
