--- a/src/main/resources/password/pwm/i18n/Message_zh_CN.properties
+++ b/src/main/resources/password/pwm/i18n/Message_zh_CN.properties
@@ -157,7 +157,8 @@ Success_ClearResponse=\u60a8\u7684\u673a\u5bc6\u95ee\u9898\u548c\u7b54\u6848\u5d
 Success_CreateGuest=\u65b0 guest \u5e10\u6237\u5df2\u6210\u529f\u521b\u5efa\u3002\u5982\u679c\u5df2\u8f93\u5165\u7535\u5b50\u90ae\u4ef6\u5730\u5740\uff0cguest \u7528\u6237\u5c06\u6536\u5230\u901a\u77e5\u3002guest \u5e10\u6237\u53ef\u80fd\u4ecd\u9700\u6fc0\u6d3b\u3002
 Success_CreateUser=\u60a8\u7684\u65b0\u7528\u6237\u5e10\u6237\u5df2\u6210\u529f\u521b\u5efa\u3002
 Success_NewUserForm=\u51c6\u5907\u521b\u5efa\u60a8\u7684\u5e10\u6237\u3002\u51c6\u5907\u597d\u65f6\u8bf7\u7ee7\u7eed\u3002
-Success_PasswordChange=\u60a8\u7684\u53e3\u4ee4\u5df2\u7ecf\u66f4\u6539\u6210\u529f\u3002
+Success_PasswordChange=\u53e3\u4ee4\u66f4\u6539\u6210\u529f\u3002
+Success_ChangedHelpdeskPassword=\u7528\u6237\u53e3\u4ee4\u66f4\u6539\u6210\u529f 
 Success_PasswordReset=\u5df2\u6210\u529f\u4e3a %1% \u8bbe\u7f6e\u53e3\u4ee4\u3002
 Success_PasswordSend=\u5df2\u5c06\u60a8\u7684\u65b0\u53e3\u4ee4\u53d1\u9001\u5230 %1%\u3002\u8bf7\u5173\u95ed\u6b64\u7a97\u53e3\uff0c\u7136\u540e\u4f7f\u7528\u60a8\u7684\u65b0\u53e3\u4ee4\u767b\u5f55\u3002
 Success_ResponsesMeetRules=\u60a8\u7684\u56de\u7b54\u6ee1\u8db3\u8981\u6c42\u3002\u8bf7\u5728\u5c31\u7eea\u4ee5\u540e\u5355\u51fb\u201c\u4fdd\u5b58\u56de\u7b54\u201d\u3002
@@ -169,3 +170,4 @@ Success_UpdateProfile=\u60a8\u7684\u7528\u6237\u4fe1\u606f\u5df2\u6210\u529f\u66
 Success_UpdateForm=\u53ef\u4ee5\u5f00\u59cb\u66f4\u65b0\u60a8\u7684\u914d\u7f6e\u6587\u4ef6\u3002\u51c6\u5907\u597d\u540e\u8bf7\u7ee7\u7eed\u3002
 Success_Action=\u5df2\u6210\u529f\u5b8c\u6210\u64cd\u4f5c %1%\u3002
 Success_OtpSetup=\u60a8\u7684\u8bbe\u5907\u6ce8\u518c\u5df2\u6210\u529f\u5b8c\u6210\u3002
+Success_TokenResend=\u5df2\u5411\u60a8\u53d1\u9001\u65b0\u7684\u5b89\u5168\u4ee3\u7801\u3002
