--- a/src/main/resources/password/pwm/i18n/Message_zh_TW.properties
+++ b/src/main/resources/password/pwm/i18n/Message_zh_TW.properties
@@ -157,7 +157,8 @@ Success_ClearResponse=\u5df2\u6210\u529f\u79fb\u9664\u60a8\u7684\u79d8\u5bc6\u55
 Success_CreateGuest=\u5df2\u6210\u529f\u5efa\u7acb\u65b0\u8a2a\u5ba2\u5e33\u6236\u3002\u5982\u679c\u5df2\u8f38\u5165\u96fb\u5b50\u90f5\u4ef6\u5730\u5740\uff0c\u4f86\u8a2a\u4f7f\u7528\u8005\u5c07\u6703\u6536\u5230\u901a\u77e5\u3002\u4ecd\u9700\u555f\u52d5\u8a2a\u5ba2\u5e33\u6236\u3002
 Success_CreateUser=\u5df2\u6210\u529f\u5efa\u7acb\u60a8\u7684\u65b0\u4f7f\u7528\u8005\u5e33\u6236\u3002
 Success_NewUserForm=\u53ef\u958b\u59cb\u5efa\u7acb\u60a8\u7684\u5e33\u6236\u3002\u6e96\u5099\u5c31\u7dd2\u6642\u5373\u53ef\u7e7c\u7e8c\u3002
-Success_PasswordChange=\u5df2\u6210\u529f\u8b8a\u66f4\u60a8\u7684\u5bc6\u78bc\u3002
+Success_PasswordChange=\u5df2\u6210\u529f\u8b8a\u66f4\u5bc6\u78bc\u3002
+Success_ChangedHelpdeskPassword=\u5df2\u6210\u529f\u8b8a\u66f4\u4f7f\u7528\u8005\u7684\u5bc6\u78bc 
 Success_PasswordReset=\u5df2\u6210\u529f\u8a2d\u5b9a %1% \u7684\u5bc6\u78bc\u3002
 Success_PasswordSend=\u5df2\u5c07\u60a8\u7684\u65b0\u5bc6\u78bc\u50b3\u9001\u81f3 %1%\u3002\u8acb\u95dc\u9589\u6b64\u8996\u7a97\uff0c\u7136\u5f8c\u4f7f\u7528\u60a8\u7684\u65b0\u5bc6\u78bc\u767b\u5165\u3002
 Success_ResponsesMeetRules=\u60a8\u7684\u56de\u61c9\u7b26\u5408\u8981\u6c42\u3002\u6e96\u5099\u5c31\u7dd2\u6642\u8acb\u6309\u4e00\u4e0b\u300c\u5132\u5b58\u7b54\u6848\u300d\u3002
@@ -169,3 +170,4 @@ Success_UpdateProfile=\u5df2\u6210\u529f\u66f4\u65b0\u60a8\u7684\u4f7f\u7528\u80
 Success_UpdateForm=\u53ef\u958b\u59cb\u66f4\u65b0\u60a8\u7684\u8a2d\u5b9a\u6a94\u3002\u6e96\u5099\u5c31\u7dd2\u6642\u5373\u53ef\u7e7c\u7e8c\u3002
 Success_Action=\u5df2\u6210\u529f\u5b8c\u6210\u52d5\u4f5c %1%\u3002
 Success_OtpSetup=\u5df2\u6210\u529f\u5b8c\u6210\u88dd\u7f6e\u8a3b\u518a\u3002
+Success_TokenResend=\u5df2\u50b3\u9001\u65b0\u7684\u5b89\u5168\u6027\u4ee3\u78bc\u7d66\u60a8\u3002
