Custom Links for the update profile page

--- a/src/main/resources/password/pwm/i18n/Config.properties
+++ b/src/main/resources/password/pwm/i18n/Config.properties
@@ -156,6 +156,9 @@ Tooltip_FormOptions_ReadOnly=Make the field unmodifiable.
 Tooltip_FormOptions_Unique=Indicate that the field value must be unique in the directory before proceeding.
 Tooltip_FormOptions_Regex=Apply a regular expression pattern to the value.  The value must match the pattern before the form is completed.  This pattern can be used to constrain the permitted syntax of the value.
 Tooltip_FormOptions_RegexError=Error message to show when the regular expression pattern is not matched.
+Tooltip_FormOptions_LinkLabel=Label to be displayed that tells where the link will go.
+Tooltip_FormOptions_LinkURL=Full url that you want to go to when the link is selected.
+Tooltip_Form_ShowInNewWindow=Choose if the link will e opened in a new browser window
 Tooltip_FormOptions_Placeholder=Placeholder text to display in the form field with the field is not populated with a value.
 Tooltip_FormOptions_Javascript=Javascript to be added to the browser.
 Tooltip_FormOptions_MultiValue=Display multiple values of the attribute.
